[gd_scene load_steps=2 format=3 uid="uid://dn47yb47wv5ct"]

[ext_resource type="Script" path="res://scenes/hud_layer.gd" id="1_1gg8x"]

[node name="HUDLayer" type="CanvasLayer"]
script = ExtResource("1_1gg8x")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="Panel" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="DamperLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="OrientationLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
